examples/errors/unreachable-bind.sem
system Syntax => Syntax

rule Unreachable
<b> => <b>
----------
<a> => <a>

